corrected button text and button spacing adjustment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,7 +113,8 @@ button.active {
 .buttons {
   display: flex;
   justify-content: space-between;
-  width: 400px;
+  width: 340px;
+  padding: 5px;
   margin-bottom: 1rem;
 }
 
@@ -248,6 +249,7 @@ button.active {
 .interest > img {
   max-width: 45%;
   max-height: 100%;
+  width: auto;
   height: auto;
 } // end interests
 
